# data-flight-pipeline

./: .env.example  .gitignore  .sqlfluff  .sqlfluffignore  Dockerfile  Dockerfile.airflow  Dockerfile.metabase  LICENSE  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  main_cli.py  pyproject.toml
.github/workflows/: deploy.yml
config/: setup_connections.sh
config/dbt/: profiles.yml
dags/: dag.py
dags/utils/: __init__.py  aviationstack.py  copy_s3_files.py  extract_api.py  format_dbt_vars.py  parquet_to_pg.py  upload_to_s3.py
data/: analytics.duckdb
data/raw/: flights_page_0.json  flights_page_1.json
data/raw/insert_date=2025-01-01/: flights_page_0.json
data/raw/insert_date=2025-12-21/: flights_page_0.json
data/raw/insert_date=2025-12-22/: flights_page_0.json
data/raw/insert_date=2025-12-23/: flights_page_0.json
data/raw/insert_date=2025-12-24/: flights_page_0.json
dbt_transform/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt_transform/macros/: copy_to_minio.sql
include/: __main__.py
include/api/: __main__.py  aviationstack.py  extract_api.py
include/openflights/: extract_openflights.py  openflights.py
metabase/: README.md  setup_dashboard.py
notebooks/: flights.json  test_api.ipynb
spark_jobs/: README.md  _etl.py  _extract.py  _load.py  _transform.py  main_cli.py
spark_jobs/aviationstack/: __init__.py  _etl.py  _load.py  _transform.py
spark_jobs/openflights/: __init__.py  _etl.py  _extract.py  _load.py  _transform.py  dictionary.py
spark_jobs/shared/: base_etl.py  config.py
spark_jobs/tests/: test_transform.py  verify_etl.py
spark_jobs/utils/: aviationstack.py
tests/: conftest.py  test_dag_structure.py
(+29 files in other folders)
