[project]
name = "data-flight-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.9.2",
    "pyspark==3.5.3",
    "requests==2.32.3",
    "dbt-core==1.8.0",
    "dbt-postgres==1.8.0",
    "dbt-spark[pyhive]==1.8.0",
    "dbt-duckdb==1.8.0",
    "duckdb>=0.10.0",
    "typer>=0.12.5",
    "click==8.1.7",
    "pandas==2.2.0",
    "pyarrow==15.0.0",
    "psycopg2-binary==2.9.11",
    "apache-airflow==2.10.3",
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-apache-spark"
]

[dependency-groups]
dev = [
    "ipykernel==7.1.0",
    "sqlfluff==4.0.4",
    "sqlfluff-templater-dbt==4.0.4",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
